sumo/tests/sumo/extended/vaporizer/errors/id_false/errors.sumo
Error: Unknown edge ('xxx') referenced in a vaporizer.
Quitting (on error).
